Enhanced po/Makefile

--- a/po/Makefile
+++ b/po/Makefile
@@ -1,10 +1,10 @@
-pot:
+POTFILE=$(shell cat POTFILES.in)
+SOURCES=$(addprefix ../, $(POTFILE))
+
+all: $(wildcard *.po)
+
+islamic-menus.pot: $(SOURCES)
 	intltool-update -g islamic-menus -p
 
-po: pot
-	for i in *.po; do \
-		intltool-update -g islamic-menus -d $${i/.po/}; \
-	done
-
-all: po
-
+%.po: islamic-menus.pot
+	intltool-update -g islamic-menus -d $*
